@@ -1,5 +1,13 @@
 2005-01-08  Jorn Baayen  <jbaayen@gnome.org>
 
+	* src/Album.cs:
+	* src/CoverDatabase.cs:
+	* src/CoverGetter.cs:
+
+	Amazon cover downloading is back again.
+
+2005-01-08  Jorn Baayen  <jbaayen@gnome.org>
+
 	* PluginLib/IPlayer.cs:
 	* TODO:
 	* doc/en/Muine.PluginLib/IPlayer.xml:
